Tue Jul 20 18:02:03 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * docs/Download.html:
          Fixed some typos, thanks to Thomas Lockhart
          <Thomas dot lockhart at jpl dot nasa dot gov> for reporting this

Tue Jul 20 15:08:49 UTC 2010  Phil Mesnier  <mesnier_p@ociweb.com>

        * tests/Bug_3319_Regression_Test.cpp:

          Fix the test to be consistent with revised service config
          behavior. The test had assumed that ACE_Service_Config::open()
          would return 0 even if svc.conf were not present, but since it
          was setting the ignore_default_svc_conf_file to 0, the restore
          behavior of the service configurator is to fail with ENOENT in
          that case.

Tue Jul 20 08:48:00 UTC 2010  Vladimir Zykov  <vladimir.zykov@prismtech.com>

        * ace/TSS_T.cpp:
          Fixed a bug in ACE_TSS::ts_get() that only exhibited on
          SunOS/Studio builds. The later configutsyion uses ACE_HAS_THR_C_DEST
          and with that define ts_get() behaved differently. In particular it
          didn't create a ts_obj if tss_adapter was not 0.

Tue Jul 20 07:38:30 UTC 2010  Martin Corino  <mcorino@remedy.nl>

        * protocols/ace/INet/SSL_CallbackManager.h:
          Fixed comment typo.

Tue Jul 20 05:25:30 UTC 2010  Martin Corino  <mcorino@remedy.nl>

        * protocols/ace/INet/HTTP_BasicAuthentication.cpp:
        * protocols/ace/INet/HTTP_BasicAuthentication.h:
        * protocols/ace/INet/HTTP_BasicAuthentication.inl:
        * protocols/ace/INet/inet.mpc:
          Added basic support for HTTP Basic Authentication scheme.

Tue Jul 20 03:56:30 UTC 2010  Martin Corino  <mcorino@remedy.nl>

        * protocols/ace/INet/HTTP_SessionBase.cpp:
          Fixed MSVC 7.1 compile problems.

        * protocols/ace/INet/HTTP_Simple_exec.cpp:
          Fixed compile problems for non-SSL builds.

Tue Jul 20 03:25:30 UTC 2010  Martin Corino  <mcorino@remedy.nl>

        * bin/MakeProjectCreator/config/inetssl.mpb: